Adding XML Jackson Mapper support