@@ -1,70 +1,50 @@
 package es.jor.phd.xvgdl.context.xml;
 
-import org.apache.commons.lang3.StringUtils;
-
-import es.indra.eplatform.properties.Properties;
-import es.indra.eplatform.util.log.ELogger;
+import com.fasterxml.jackson.dataformat.xml.annotation.JacksonXmlProperty;
 import es.jor.phd.xvgdl.model.location.DirectionVector;
 import es.jor.phd.xvgdl.model.object.GameObject;
 import es.jor.phd.xvgdl.model.object.GameObjectType;
-import es.jor.phd.xvgdl.model.object.IGameObject;
 import es.jor.phd.xvgdl.model.object.ai.IGameObjectAI;
-import es.jor.phd.xvgdl.util.GameConstants;
+import lombok.Data;
+import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
 
 /**
- * Game Map XML element Definition
+ * Game Object XML element Definition
  *
  * @author jrquinones
  *
  */
-public class GameObjectDefinition extends Properties {
+@Slf4j
+@Data
+public class GameObjectDefinition {
 
-    /** XML main tag. */
-    public static final String XMLTAG = "object";
-
-    /** XML Attribute. Name. */
-    public static final String XMLATTR_NAME = "name";
-
-    /** XML Attribute. Type. */
-    public static final String XMLATTR_TYPE = "type";
-
-    /** XML Attribute. Size X. */
-    public static final String XMLATTR_SIZE_X = "sizeX";
-
-    /** XML Attribute. Size Y. */
-    public static final String XMLATTR_SIZE_Y = "sizeY";
-
-    /** XML Attribute. Size Z. */
-    public static final String XMLATTR_SIZE_Z = "sizeZ";
-
-    /** XML Attribute. Position X. */
-    public static final String XMLATTR_POSITION_X = "x";
-
-    /** XML Attribute. Position Y. */
-    public static final String XMLATTR_POSITION_Y = "y";
-
-    /** XML Attribute. Position Z. */
-    public static final String XMLATTR_POSITION_Z = "z";
-
-    /** XML Attribute. Instances. */
-    public static final String XMLATTR_INSTANCES = "instances";
-
-    /** XML Attribute. Artificial Intelligence. */
-    public static final String XMLATTR_AI = "ai";
-
-    /** XML Attribute. Volatile. */
-    public static final String XMLATTR_VOLATILE = "volatile";
-
-    /** XML Attribute. Dynamic. */
-    public static final String XMLATTR_DYNAMIC = "dynamic";
-
-    /** XML Attribute. Direction. */
-    public static final String XMLATTR_DIRECTION = "direction";
-
-    @Override
-    public void setXMLAttr(String key, String value) {
-        setProperty(key, value);
-    }
+    @JacksonXmlProperty(isAttribute = true)
+    private String name;
+    @JacksonXmlProperty(isAttribute = true)
+    private String type;
+    @JacksonXmlProperty(isAttribute = true)
+    private Integer sizeX;
+    @JacksonXmlProperty(isAttribute = true)
+    private Integer sizeY;
+    @JacksonXmlProperty(isAttribute = true)
+    private Integer sizeZ;
+    @JacksonXmlProperty(isAttribute = true)
+    private Integer positionX;
+    @JacksonXmlProperty(isAttribute = true)
+    private Integer positionY;
+    @JacksonXmlProperty(isAttribute = true)
+    private Integer positionZ;
+    @JacksonXmlProperty(isAttribute = true)
+    private Integer instances;
+    @JacksonXmlProperty(isAttribute = true)
+    private String ai;
+    @JacksonXmlProperty(isAttribute = true)
+    private Boolean isVolatile;
+    @JacksonXmlProperty(isAttribute = true)
+    private Boolean isDynamic;
+    @JacksonXmlProperty(isAttribute = true)
+    private String direction;
 
     /**
      *
@@ -72,40 +52,44 @@ public class GameObjectDefinition extends Properties {
      * @param instance Instance of the object
      * @return Game Object completely initialize
      */
-    public static IGameObject convert(GameObjectDefinition objectDefinition, int instance) {
-
-        GameObject gameObject = null;
+    public static GameObject convert(GameObjectDefinition objectDefinition, int instance) {
+        return convert(GameObject.class, objectDefinition, instance);
+    }
+    /**
+     *
+     * @param objectDefinition Object definition
+     * @param instance Instance of the object
+     * @return Game Object completely initialize
+     */
+    public static GameObject convert(Class clazz, GameObjectDefinition objectDefinition, int instance) {
 
         try {
-            gameObject = new GameObject();
-            gameObject.setName(objectDefinition.getProperty(XMLATTR_NAME));
+            GameObject gameObject = (GameObject) clazz.getDeclaredConstructor().newInstance();
+            gameObject.setName(objectDefinition.getName());
             gameObject.setInstance(instance);
-            gameObject.setDynamic(objectDefinition.getBooleanValue(XMLATTR_DYNAMIC, false));
-            gameObject.setVolatile(objectDefinition.getBooleanValue(XMLATTR_VOLATILE, false));
-            gameObject.setPosition(objectDefinition.getIntegerValue(XMLATTR_POSITION_X, -1),
-                    objectDefinition.getIntegerValue(XMLATTR_POSITION_Y, -1),
-                    objectDefinition.getIntegerValue(XMLATTR_POSITION_Z, -1));
-            gameObject.setSizeX(objectDefinition.getIntegerValue(XMLATTR_SIZE_X, 0));
-            gameObject.setSizeY(objectDefinition.getIntegerValue(XMLATTR_SIZE_Y, 0));
-            gameObject.setSizeZ(objectDefinition.getIntegerValue(XMLATTR_SIZE_Z, 0));
+            gameObject.setDynamic(objectDefinition.getIsDynamic());
+            gameObject.setVolatile(objectDefinition.getIsVolatile());
+            gameObject.setPosition(objectDefinition.getPositionX(),
+                    objectDefinition.getPositionY(),
+                    objectDefinition.getPositionZ());
+            gameObject.setSizeX(objectDefinition.getSizeX());
+            gameObject.setSizeY(objectDefinition.getSizeY());
+            gameObject.setSizeZ(objectDefinition.getSizeZ());
             gameObject.setIntendedPosition(gameObject.getX(), gameObject.getY(), gameObject.getZ());
-            gameObject.setObjectType(GameObjectType.fromString(objectDefinition.getProperty(XMLATTR_TYPE)));
+            gameObject.setObjectType(GameObjectType.fromString(objectDefinition.getType()));
 
-            if (objectDefinition.getProperty(XMLATTR_AI) != null
-                    && !objectDefinition.getProperty(XMLATTR_AI).trim().equals("")) {
+            if (StringUtils.isNotEmpty(objectDefinition.getAi())) {
                 gameObject.setObjectAI(
-                        (IGameObjectAI) Class.forName(objectDefinition.getProperty(XMLATTR_AI)).newInstance());
+                        (IGameObjectAI) Class.forName(objectDefinition.getAi()).getDeclaredConstructor().newInstance());
             }
             
-            if (StringUtils.isNotEmpty(objectDefinition.getProperty(XMLATTR_DIRECTION))) {
-                gameObject.setDirection(DirectionVector.parseFromString(objectDefinition.getProperty(XMLATTR_DIRECTION)));
+            if (StringUtils.isNotEmpty(objectDefinition.getDirection())) {
+                gameObject.setDirection(DirectionVector.parseFromString(objectDefinition.getDirection()));
             }
+            return gameObject;
         } catch (Exception e) {
-            ELogger.error(GameMapDefinition.class, GameConstants.GAME_CONTEXT_LOGGER_CATEGORY,
-                    "Exception converting GameObjectDefinition to GameObject: " + e.getMessage(), e);
-            gameObject = null;
+            log.error("Exception converting GameObjectDefinition to GameObject: " + e.getMessage(), e);
+            return  null;
         }
-
-        return gameObject;
     }
 }
